--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <h1>Выберите ваш банк</h1>
   <p>Чтобы перевести через СБП на номер <b>+7 900 123-45-67</b></p>
 
-  <button class="sber" onclick="location.href='sberbankonline://send?phone=79001234567'">Сбербанк</button>
-  <button class="tinkoff" onclick="location.href='https://www.tinkoff.ru/pay?phone=79001234567'">Тинькофф</button>
+  <button class="sber" onclick="location.href='https://www.sberbank.com/sms/pbpn?requisiteNumber=79273272040'">Сбербанк</button>
+  <button class="tinkoff" onclick="location.href='https://www.tinkoff.ru/rm/r_LOJAcbgZlD.kZHsnMMZEH/Sg2JQ29492'">Тинькофф</button>
   <button class="other" onclick="location.href='https://qr.nspk.ru/AD10004N7J15LJG8QCHDF28B49EM0QJ7'">Другой банк</button>
 
 </body>
