--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <h1>Выберите ваш банк</h1>
-  <p>Чтобы перевести через СБП на номер <b>+7 900 123-45-67</b></p>
+  <p>Чтобы перевести через СБП на номер <b>+79273272040</b></p>
 
   <button class="sber" onclick="location.href='https://www.sberbank.com/sms/pbpn?requisiteNumber=79273272040'">Сбербанк</button>
   <button class="tinkoff" onclick="location.href='https://www.tinkoff.ru/rm/r_LOJAcbgZlD.kZHsnMMZEH/Sg2JQ29492'">Тинькофф</button>
